--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tempor, neque id pharetra tempus, tellus urna dapibus odio, at pretium elit lectus eget lacus. Duis dapibus blandit nibh, eget egestas nibh fermentum sit amet. Morbi placerat vestibulum sodales. Curabitur tempor nisl eu lorem pellentesque imperdiet. Cras enim odio, bibendum in dapibus a, bibendum id nulla. Sed sit amet erat eros. Donec eu arcu non massa sodales iaculis. Sed ut aliquam mi. Morbi fringilla nisl non eros commodo malesuada porta ipsum posuere. Ut sed urna nec purus malesuada accumsan. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 			<p>Etiam nec orci vel enim semper euismod ac ac elit. Mauris ut nunc sit amet enim eleifend malesuada quis ut mi. Quisque felis magna, egestas et tempor vel, dictum in nulla. In commodo sagittis urna. Nunc auctor est non est elementum viverra. Suspendisse potenti. Quisque lobortis fringilla convallis.</p>
 			<p>&nbsp;</p>
-			<p>&nbsp;</p>
+			<p><img src="images/homepage-image.jpg" width="500" height="500" alt="homepage-image" /></p>
 			<p>&nbsp;</p>
 		<!-- InstanceEndEditable --></td>
 	</tr>
