--- a/products/sig-sauer.html
+++ b/products/sig-sauer.html
@@ -1,10 +1,59 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/master-template.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<!-- InstanceBeginEditable name="doctitle" -->
 <title>Untitled Document</title>
+<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable -->
 </head>
 
 <body>
+<table width="950">
+	<tr>
+		<th colspan="2" scope="col">
+			<h1>Safety First Firearms and Ranges</h1>
+			<p><img src="../images/banner-image.jpg" width="950" height="150" alt="banner-picture" /></p>
+		</th>
+	</tr>
+	<tr>
+		<td width="318">
+			<h2>Navigation</h2>
+			<p><a href="../index.html">Home</a></p>
+			<p><a href="../about.html">About the Company</a></p>
+			<p>Items</p>
+			<ul>
+				<li><a href="beretta.html">Beretta</a></li>
+				<li><a href="sig-sauer.html">Sig Sauer</a></li>
+				<li><a href="heckler-koch.html">Heckler &amp; Koch</a></li>
+				<li><a href="walther-ppqm2.html">Walther PPQM2</a></li>
+			</ul>
+			<p>Locations</p>
+			<ul>
+				<li><a href="../locations/east-coast.html">East Coast</a></li>
+				<li><a href="../locations/west-coast.html">West Coast</a></li>
+				<li><a href="../locations/new-england.html">New England Area</a></li>
+				<li><a href="../locations/midwest.html">Midwest</a></li>
+			</ul>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+<p>&nbsp;</p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+		</td>
+		<td width="628"><!-- InstanceBeginEditable name="content" -->
+			<h1>Sig Sauer P229 (9mm)</h1>
+			<p><a href="../specifications/specifications-sig-saure.html">Specifications</a></p>
+			<p><img src="../images/sig-sauer.jpg" width="600" height="400" alt="sig-sauer-image" /></p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tellus quam, faucibus ut fermentum vitae, lacinia sit amet purus. Morbi quam risus, egestas quis dapibus ac, congue sit amet justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse ut libero et turpis convallis adipiscing eget vitae nunc. Praesent pellentesque vulputate libero ac pharetra. Nullam purus mi, facilisis quis interdum sed, pulvinar quis felis. Donec fringilla egestas enim a rhoncus. Mauris molestie auctor est, ac porttitor metus interdum a. Donec bibendum nibh at leo facilisis dictum blandit neque ornare. Etiam mollis fringilla rutrum. Fusce eros massa, fringilla at laoreet in, varius sed nibh. Donec eget ipsum in augue suscipit hendrerit quis eget lectus.</p>
+			<p>Ut ac elit sit amet metus fermentum malesuada nec at purus. Vivamus sed pellentesque nunc. Vivamus vel elit in nibh tempus ullamcorper. Aenean tellus risus, lacinia id vestibulum sed, sodales vitae risus. Sed nec est lacus. Fusce volutpat adipiscing nibh a mattis. Quisque dignissim dolor nec ante varius rhoncus. Aliquam eget tempor elit. Cras quis risus non libero rutrum rhoncus. Curabitur porta, eros id fermentum ultrices, metus tortor adipiscing sapien, at feugiat odio risus eu tellus. Curabitur vitae nulla ligula, vitae ornare erat. Aliquam erat volutpat. Sed dignissim, nisl ac pellentesque feugiat, erat libero aliquam magna, quis aliquam libero nibh non purus. Nam cursus enim nec enim cursus auctor vel a arcu.</p>
+			<p>Sed libero sem, sodales at adipiscing vitae, sollicitudin vitae odio. Sed vulputate mauris quis erat varius sit amet accumsan purus malesuada. Mauris quis ornare libero. Quisque sem risus, ornare a convallis ac, lacinia lacinia magna. Aliquam vitae viverra lectus. Aenean ac sollicitudin justo. Vivamus tellus dolor, rutrum sit amet congue a, faucibus nec dui. Nunc mattis velit et dolor sagittis vulputate. Aenean sagittis, ante ac gravida rutrum, nisl erat interdum enim, at eleifend orci quam at ante. Nullam luctus, dolor nec lacinia viverra, risus risus mollis sem, in adipiscing felis urna quis ligula. Phasellus porta turpis eget lorem tempus quis fringilla leo iaculis. Praesent id odio purus. Aenean dolor ligula, condimentum eu auctor vitae, varius eu est. Maecenas blandit turpis vitae nunc varius et ornare sem vulputate. Nulla facilisi. Aliquam ultrices nunc venenatis nibh suscipit cursus.</p>
+		<!-- InstanceEndEditable --></td>
+	</tr>
+	<tr>
+		<td colspan="2"><img src="../images/footer-image.jpg" width="950" height="150" alt="footer-image" /></td>
+	</tr>
+</table>
 </body>
-</html>
+<!-- InstanceEnd --></html>
