edited specs pages
added full template and tables to specification pages

--- a/specifications/specifications-heckler-koch.html
+++ b/specifications/specifications-heckler-koch.html
@@ -1,10 +1,76 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/master-template.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<!-- InstanceBeginEditable name="doctitle" -->
 <title>Untitled Document</title>
+<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable -->
 </head>
 
 <body>
+<table width="950">
+	<tr>
+		<th colspan="2" scope="col">
+			<h1>Safety First Firearms and Ranges</h1>
+			<p><img src="../images/banner-image.jpg" width="950" height="150" alt="banner-picture" /></p>
+		</th>
+	</tr>
+	<tr>
+		<td width="318">
+			<h2>Navigation</h2>
+			<p><a href="../index.html">Home</a></p>
+			<p><a href="../about.html">About the Company</a></p>
+			<p>Items</p>
+			<ul>
+				<li><a href="../products/beretta.html">Beretta</a></li>
+				<li><a href="../products/sig-sauer.html">Sig Sauer</a></li>
+				<li><a href="../products/heckler-koch.html">Heckler &amp; Koch</a></li>
+				<li><a href="../products/walther-ppqm2.html">Walther PPQM2</a></li>
+			</ul>
+			<p>Locations</p>
+			<ul>
+				<li><a href="../locations/east-coast.html">East Coast</a></li>
+				<li><a href="../locations/west-coast.html">West Coast</a></li>
+				<li><a href="../locations/new-england.html">New England Area</a></li>
+				<li><a href="../locations/midwest.html">Midwest</a></li>
+			</ul>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+<p>&nbsp;</p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+		</td>
+		<td width="628"><!-- InstanceBeginEditable name="content" -->
+			<p>Specifications for Heckler &amp; Koch P30L (9MM)&nbsp;</p>
+			<table width="500">
+				<tr>
+					<th colspan="2" scope="col">Specifications</th>
+				</tr>
+				<tr>
+					<th width="129" scope="col"><strong>Caliber</strong></th>
+					<th width="359" scope="col">&nbsp;</th>
+				</tr>
+				<tr>
+					<td>Action Type</td>
+					<td>&nbsp;</td>
+				</tr>
+				<tr>
+					<td>Overall Length</td>
+					<td>&nbsp;</td>
+				</tr>
+				<tr>
+					<td>Exposition </td>
+					<td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tellus quam, faucibus ut fermentum vitae, lacinia sit amet purus. Morbi quam risus, egestas quis dapibus ac, congue sit amet justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse ut libero et turpis convallis adipiscing eget vitae nunc. Praesent pellentesque vulputate libero ac pharetra. Nullam purus mi, facilisis quis interdum sed, pulvinar quis felis. Donec fringilla egestas enim a rhoncus. Mauris molestie auctor est, ac porttitor metus interdum a. Donec bibendum nibh at leo facilisis dictum blandit neque ornare. Etiam mollis fringilla rutrum. Fusce eros massa, fringilla at laoreet in, varius sed nibh. Donec eget ipsum in augue suscipit hendrerit quis eget lectus.</td>
+				</tr>
+			</table>
+			<p>&nbsp;</p>
+		<!-- InstanceEndEditable --></td>
+	</tr>
+	<tr>
+		<td colspan="2"><img src="../images/footer-image.jpg" width="950" height="150" alt="footer-image" /></td>
+	</tr>
+</table>
 </body>
-</html>
+<!-- InstanceEnd --></html>
