added content to specifications pages
finished added contents to the specification tables on all of the
individual specification pages

--- a/specifications/specifications-heckler-koch.html
+++ b/specifications/specifications-heckler-koch.html
@@ -50,15 +50,15 @@
 				</tr>
 				<tr>
 					<th width="129" scope="col"><strong>Caliber</strong></th>
-					<th width="359" scope="col">&nbsp;</th>
+					<th width="359" scope="col">9MM</th>
 				</tr>
 				<tr>
 					<td>Action Type</td>
-					<td>&nbsp;</td>
+					<td> short recoil-operated, browing-type tilting barrel, locked breech</td>
 				</tr>
 				<tr>
 					<td>Overall Length</td>
-					<td>&nbsp;</td>
+					<td>193 mm</td>
 				</tr>
 				<tr>
 					<td>Exposition </td>
