--- a/specifications/specifications-sig-saure.html
+++ b/specifications/specifications-sig-saure.html
@@ -44,21 +44,21 @@
 		</td>
 		<td width="628"><!-- InstanceBeginEditable name="content" -->&nbsp;
 			<p>Specifications	for Sig Sauer P229 (9MM)</p>
-			<table width="500">
+			<table width="504">
 				<tr>
 					<th colspan="2" scope="col">Specifications</th>
 				</tr>
 				<tr>
 					<th width="129" scope="col"><strong>Caliber</strong></th>
-					<th width="359" scope="col">&nbsp;</th>
+					<th width="359" scope="col">9x19 </th>
 				</tr>
 				<tr>
 					<td>Action Type</td>
-					<td>&nbsp;</td>
+					<td>mechanical locked, recoil operated</td>
 				</tr>
 				<tr>
 					<td>Overall Length</td>
-					<td>&nbsp;</td>
+					<td>7.7 inches</td>
 				</tr>
 				<tr>
 					<td>Exposition </td>
