--- a/specifications/specifications-beretta.html
+++ b/specifications/specifications-beretta.html
@@ -50,15 +50,15 @@
 				</tr>
 				<tr>
 					<th width="129" scope="col"><strong>Caliber</strong></th>
-					<th width="359" scope="col">&nbsp;</th>
+					<th width="359" scope="col">9x19 mm </th>
 				</tr>
 				<tr>
 					<td>Action Type</td>
-					<td>&nbsp;</td>
+					<td>semi-automatic</td>
 				</tr>
 				<tr>
 					<td>Overall Length</td>
-					<td>&nbsp;</td>
+					<td>8.5 inches</td>
 				</tr>
 				<tr>
 					<td>Exposition </td>
