--- a/specifications/specifications-walther.html
+++ b/specifications/specifications-walther.html
@@ -64,15 +64,15 @@
 				</tr>
 				<tr>
 					<th width="129" scope="col"><strong>Caliber</strong></th>
-					<th width="359" scope="col">&nbsp;</th>
+					<th width="359" scope="col">semi automatic</th>
 				</tr>
 				<tr>
 					<td>Action Type</td>
-					<td>&nbsp;</td>
+					<td>short recoil operated,  locked breech</td>
 				</tr>
 				<tr>
 					<td>Overall Length</td>
-					<td>&nbsp;</td>
+					<td>9x19mm Parabellum</td>
 				</tr>
 				<tr>
 					<td>Exposition </td>
