last minute changes
fixed spacing and headings

--- a/specifications/specifications-beretta.html
+++ b/specifications/specifications-beretta.html
@@ -43,7 +43,7 @@
 			<p>&nbsp;</p>
 		</td>
 		<td width="628"><!-- InstanceBeginEditable name="content" -->&nbsp;
-			<p>Specifications for Beretta 92FS</p>
+			<h2>Specifications for Beretta 92FS</h2>
 			<table width="500">
 				<tr>
 					<th colspan="2" scope="col">Specifications</th>
