--- a/specifications/specifications-heckler-koch.html
+++ b/specifications/specifications-heckler-koch.html
@@ -43,7 +43,7 @@
 			<p>&nbsp;</p>
 		</td>
 		<td width="628"><!-- InstanceBeginEditable name="content" -->
-			<p>Specifications for Heckler &amp; Koch P30L (9MM)&nbsp;</p>
+			<h2>Specifications for Heckler &amp; Koch P30L (9MM)&nbsp;</h2>
 			<table width="500">
 				<tr>
 					<th colspan="2" scope="col">Specifications</th>
