--- a/specifications/specifications-sig-saure.html
+++ b/specifications/specifications-sig-saure.html
@@ -43,7 +43,7 @@
 			<p>&nbsp;</p>
 		</td>
 		<td width="628"><!-- InstanceBeginEditable name="content" -->&nbsp;
-			<p>Specifications	for Sig Sauer P229 (9MM)</p>
+			<h2>Specifications	for Sig Sauer P229 (9MM)</h2>
 			<table width="504">
 				<tr>
 					<th colspan="2" scope="col">Specifications</th>
