--- a/specifications/specifications-walther.html
+++ b/specifications/specifications-walther.html
@@ -57,7 +57,7 @@
 			<p>&nbsp;</p>
 		</td>
 		<td width="628"><!-- InstanceBeginEditable name="content" -->&nbsp;
-			<p>Specifications for Walther PPQ M2</p>
+			<h2>Specifications for Walther PPQ M2</h2>
 			<table width="500">
 				<tr>
 					<th colspan="2" scope="col">Specifications</th>
